--- a/src/App.css
+++ b/src/App.css
@@ -22,16 +22,16 @@
 
 html,
 body {
-    font-size: 20px;
+    font-size: 16px;
     height: 100%;
 }
 
-.app-activee {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 3;
+@media screen and (min-width: 768px) {
+
+    html,
+    body {
+        font-size: 20px;
+    }
 }
 
 .main-container {
@@ -402,6 +402,21 @@ body {
     grid-template-columns: 1fr;
 }
 
+.workshoplist-load-more-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.workshoplist-load-more {
+    font-family: 'LivvicBold', monospace;
+    font-size: 1rem;
+    margin-right: 20px;
+    margin-top: 1.6rem;
+    border-bottom: 2px solid var(--my-blue);
+    cursor: pointer;
+}
+
 
 /* Workshopcard css */
 .workshopcard-container {
@@ -560,7 +575,7 @@ body {
 .workshopdetailpage-title {
     color: var(--my-blue);
     font-family: 'LivvicBold', monospace;
-    font-size: 36px;
+    font-size: 2rem;
     margin-bottom: 20px;
 }
 
@@ -568,11 +583,12 @@ body {
     margin-left: 20px;
     margin-top: 10px;
     color: black;
-    font-size: 14px;
+    font-size: 0.9rem;
 }
 
 .workshopdetailpage-author {
-    font-size: 19px;
+    font-size: 1.3rem;
+    font-family: 'LivvicBold', monospace;
     margin-left: 5px;
 }
 
@@ -596,7 +612,7 @@ body {
 
 .workshopdetailpage-similar-workshops-title {
     font-family: 'LivvicBold', monospace;
-    font-size: 32px;
+    font-size: 1.7rem;
 }
 
 .workshopdetailpage-buy-ticket-container {
@@ -633,6 +649,69 @@ body {
     cursor: pointer;
 }
 
+.workshopdetailpage-loader-container {
+    height: 80vh;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wrap {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.text {
+    color: var(--my-blue);
+    font-family: 'LivvicBold', monospace;
+    font-size: 1.5rem;
+    display: inline-block;
+    margin-left: 1.5rem;
+}
+
+.bounceball {
+    position: relative;
+    display: inline-block;
+    height: 1.5rem;
+    width: 1rem;
+
+}
+
+.bounceball:before {
+    position: absolute;
+    content: '';
+    display: block;
+    top: 0;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 50%;
+    background-color: var(--my-yellow);
+    transform-origin: 50%;
+    animation: bounce 500ms alternate infinite ease;
+}
+
+@keyframes bounce {
+    0% {
+        top: 1.1rem;
+        height: 0.5rem;
+        border-radius: 60px 60px 20px 20px;
+        transform: scaleX(2);
+    }
+
+    35% {
+        height: 1rem;
+        border-radius: 50%;
+        transform: scaleX(1);
+    }
+
+    100% {
+        top: -1rem;
+    }
+}
+
 
 
 /* Checkout css */
@@ -644,10 +723,6 @@ body {
     width: 100vw;
     height: 100vh;
     z-index: 200;
-}
-
-.checkout-background-handler-passive {
-    display: none;
 }
 
 .checkout-container-active {
@@ -690,6 +765,10 @@ body {
     display: flex;
     flex-direction: column;
     margin-bottom: 35px;
+}
+
+.checkbox-label-holder {
+    width: 100%;
 }
 
 .checkout-form-label-container {
@@ -740,7 +819,7 @@ body {
 
 .checkout-form-date-input {
     border: none;
-    padding: 15px 0px;
+    padding: 15px 0px 12px 0px;
     border-bottom: 2px solid #7F7F7F;
 
     transition: 0.07s ease-out;
@@ -749,7 +828,7 @@ body {
 .checkout-form-date-input:focus {
     outline: none;
     background-color: rgba(242, 242, 242, 1);
-    padding: 15px 20px;
+    padding: 15px 20px 12px 20px;
     border-bottom: 2px solid var(--my-blue);
 
     transition: 0.07s ease-in;
@@ -780,11 +859,11 @@ body {
 
 .checkbox {
     display: grid;
-    grid-template-columns: min-content auto;
+    grid-template-columns: min-content 1fr;
     grid-gap: 0.5em;
     font-size: 1rem;
     margin-bottom: 35px;
-    width: fit-content;
+    width: 100%;
 }
 
 .checkbox-input>input {
@@ -891,7 +970,7 @@ body {
 
 
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1320px) {
 
     /* Header css */
     .cart-container {
@@ -1098,6 +1177,12 @@ body {
         padding: 4rem 5rem;
         top: 5%;
         left: 25%;
+    }
+
+    .checkout-form-date-and-gender-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 20px;
     }
 
 }
